--- a/index.html
+++ b/index.html
@@ -1,15 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css">
+
+    <!--police google font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+
 </head>
 
 <body>
+    <header>
+        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
+    </header>
+
+    <section class="presentation">
+        <div class="localisation">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Paris,Belleville</p>
+        </div>
+
+        <div class="presentation--site">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <button class="btn__action">Explorer nos restaurants</button>
+
+        </div>
+    </section>
+
+    <section class="fonctionnement">
+        <h1>Fonctionnement</h1>
+        <div class="fonctionnement__liste">
+            <li>
+                <span class="fonctionnement__chiffre">1</span>
+                <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
+            </li>
+
+            <li>
+                <span class="fonctionnement__chiffre">2</span>
+                <i class="fas fa-list-ul"></i> Composez votre menu
+            </li>
+
+            <li>
+                <span class="fonctionnement__chiffre">3</span>
+                <i class="fas fa-store"></i> Dégustez au restaurant</li>
+        </div>
+
+    </section>
+
+    <section class="restaurants">
+        <h1 class="restaurants__titre">Restaurants</h1>
+
+        <a class="restaurants__cartes">
+
+            <img src="" alt="">
+            <p class="restaurants__nouveau">Nouveau</p>
+            <div class="restaurants__cartes__texte">
+                <h3></h3>
+                <p></p>
+                <i class="far fa-heart"></i>
+            </div>
+        </a>
+
+        <a class="restaurants__cartes">
+            <img src="" alt="">
+            <p class="restaurants__nouveau">Nouveau</p>
+            <div class="restaurants__cartes__texte">
+                <h3></h3>
+                <p></p>
+                <i class="far fa-heart"></i>
+            </div>
+        </a>
+
+        <a class="restaurants__cartes">
+            <img src="" alt="">
+            <div class="restaurants__cartes__texte">
+                <h3></h3>
+                <p></p>
+                <i class="far fa-heart"></i>
+            </div>
+        </a>
+
+        <a class="restaurants__cartes">
+            <img src="" alt="">
+            <div class="restaurants__cartes__texte">
+                <h3></h3>
+                <p></p>
+                <i class="far fa-heart"></i>
+            </div>
+        </a>
+
+        <a class="restaurants__cartes">
+            <img src="" alt="">
+            <div class="restaurants__cartes__texte">
+                <h3></h3>
+                <p></p>
+                <i class="far fa-heart"></i>
+            </div>
+        </a>
+
+
+
+    </section>
+
+    <footer>
+        <img src="./Maquettes/images/logo/ohmyfood.png">
+        <div class="ul">
+            <li><a href="#">Proposer un restaurant</a></li>
+            <li><a href="#">Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:hello@gmail.com">Contact</a></li>
+        </div>
+    </footer>
 
 </body>
 
