html index+ menu 1

--- a/menu1.html
+++ b/menu1.html
@@ -27,6 +27,16 @@
             <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
         </div>
     </header>
+    <section class="background">
+        <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant la palette du goût">
+    </section>
+    <section class="menu">
+        <div class="menu__titre">
+            <h1>La palette du goût</h1>
+            <i class="far fa-heart"></i>
+        </div>
+
+    </section>
 
     <footer>
 
