html menu 1-2-3-4 + index

--- a/index.html
+++ b/index.html
@@ -20,106 +20,105 @@
     />
 
 </head>
+<!--Haut de page-->
 
 <body>
     <header>
         <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
     </header>
+    <main>
+        <!--Partie présentation-->
 
-    <section class="presentation">
-        <div class="localisation">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>Paris,Belleville</p>
-        </div>
-
-        <div class="presentation--site">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <button class="btn__action">Explorer nos restaurants</button>
-
-        </div>
-    </section>
-
-    <section class="fonctionnement">
-        <h1>Fonctionnement</h1>
-        <div class="fonctionnement__liste">
-            <li>
-                <span class="fonctionnement__chiffre">1</span>
-                <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
-            </li>
-
-            <li>
-                <span class="fonctionnement__chiffre">2</span>
-                <i class="fas fa-list-ul"></i> Composez votre menu
-            </li>
-
-            <li>
-                <span class="fonctionnement__chiffre">3</span>
-                <i class="fas fa-store"></i> Dégustez au restaurant</li>
-        </div>
-
-    </section>
-
-    <section class="restaurants">
-        <h1 class="restaurants__titre">Restaurants</h1>
-
-        <a class="restaurants__cartes">
-
-            <img src="" alt="">
-            <p class="restaurants__nouveau">Nouveau</p>
-            <div class="restaurants__cartes__texte">
-                <h3></h3>
-                <p></p>
-                <i class="far fa-heart"></i>
+        <section class="presentation">
+            <div class="localisation">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Paris,Belleville</p>
             </div>
-        </a>
 
-        <a class="restaurants__cartes">
-            <img src="" alt="">
-            <p class="restaurants__nouveau">Nouveau</p>
-            <div class="restaurants__cartes__texte">
-                <h3></h3>
-                <p></p>
-                <i class="far fa-heart"></i>
+            <div class="presentation--site">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <button class="btn__action">Explorer nos restaurants</button>
+
             </div>
-        </a>
+        </section>
 
-        <a class="restaurants__cartes">
-            <img src="" alt="">
-            <div class="restaurants__cartes__texte">
-                <h3></h3>
-                <p></p>
-                <i class="far fa-heart"></i>
+        <section class="fonctionnement">
+            <h1>Fonctionnement</h1>
+            <div class="fonctionnement__liste">
+                <li>
+                    <span class="fonctionnement__chiffre">1</span>
+                    <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
+                </li>
+
+                <li>
+                    <span class="fonctionnement__chiffre">2</span>
+                    <i class="fas fa-list-ul"></i> Composez votre menu
+                </li>
+
+                <li>
+                    <span class="fonctionnement__chiffre">3</span>
+                    <i class="fas fa-store"></i> Dégustez au restaurant</li>
             </div>
-        </a>
 
-        <a class="restaurants__cartes">
-            <img src="" alt="">
-            <div class="restaurants__cartes__texte">
-                <h3></h3>
-                <p></p>
-                <i class="far fa-heart"></i>
-            </div>
-        </a>
+        </section>
 
-        <a class="restaurants__cartes">
-            <img src="" alt="">
-            <div class="restaurants__cartes__texte">
-                <h3></h3>
-                <p></p>
-                <i class="far fa-heart"></i>
-            </div>
-        </a>
+        <!--Les restaurants-->
+
+        <section class="restaurants">
+            <h1 class="restaurants__titre">Restaurants</h1>
+
+            <a class="restaurants__cartes" href="./menu1.html">
+
+                <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Carte du restaurant la palette du gôut">
+                <p class="restaurants__nouveau">Nouveau</p>
+                <div class="restaurants__cartes__texte">
+                    <h3>La palette du gôut</h3>
+                    <p>Ménilmontant</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+
+            <a class="restaurants__cartes" href="./menu2.html">
+                <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Carte du restaurant La note enchantée">
+                <p class="restaurants__nouveau">Nouveau</p>
+                <div class="restaurants__cartes__texte">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+
+            <a class="restaurants__cartes" href="./menu3.html">
+                <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Carte du restaurant A la française">
+                <div class="restaurants__cartes__texte">
+                    <h3>A la française</h3>
+                    <p>Cité Rouge</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+
+            <a class="restaurants__cartes" href="./menu4.html">
+                <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Carte du restaurant Le délice des sens">
+                <div class="restaurants__cartes__texte">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                    <i class="far fa-heart"></i>
+                </div>
+            </a>
+
+        </section>
+
+    </main>
 
 
-
-    </section>
+    <!--Footer-->
 
     <footer>
         <img src="./Maquettes/images/logo/ohmyfood.png">
         <div class="ul">
-            <li><a href="#">Proposer un restaurant</a></li>
-            <li><a href="#">Devenir partenaire</a></li>
+            <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:hello@gmail.com">Contact</a></li>
         </div>
