--- a/menu2.html
+++ b/menu2.html
@@ -31,14 +31,14 @@
     <main>
         <!--Image background-->
         <section class="background">
-            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant la palette du goût">
+            <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo restaurant la note enchantée">
         </section>
 
         <!--Menu-->
         <section class="menu">
 
             <div class="menu__name">
-                <h1>La palette du goût</h1>
+                <h1>La note enchantée</h1>
                 <i class="far fa-heart"></i>
             </div>
 
@@ -50,7 +50,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Fricassée d'escargot</b><br>Au piment d'espelette</p>
+                        <p><b>Ravioles de foie gras</b><br>Accompagnés de leur crème à la truffe</p>
                     </div>
                     <div class="menu__entrees__prix"><b>25€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
@@ -58,7 +58,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Foie gras de canard mi-cuit</b><br>Et ses copeaux de truffe noire</p>
+                        <p><b>Caviar osciètre </b><br>Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="menu__entrees__prix"><b>35€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
@@ -66,9 +66,17 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Oeuf au plat</b><br>Assaisonné à la truffe sur lit de caviar</p>
+                        <p><b>Homard et espuma de potiron</b><br>Mariné aux zestes d'orange</p>
                     </div>
                     <div class="menu__entrees__prix"><b>20€</b></div>
+                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                </div>
+
+                <div class="btn__menu">
+                    <div class="menu__entrees__titre">
+                        <p><b>Foie gras de canard cuit entier</b><br>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="menu__entrees__prix"><b>35€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
                 </div>
             </div>
@@ -78,7 +86,7 @@
                 <h2>PLATS</h2>
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Filet de boeuf aux herbes</b><br>Accompagné de sa ribambelle de légumes</p>
+                        <p><b>Noix de coquilles Saint-Jacques</b><br>Sur lit de purée de céleri-rave</p>
                     </div>
                     <div class="menu__plats__prix"><b>40€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -86,7 +94,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Parmentier de queue de boeuf</b><br>À la truffe noire sur sa purée de panais</p>
+                        <p><b>Langoustine poêlée</b><br>Purée de patate douce</p>
                     </div>
                     <div class="menu__plats__prix"><b>35€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -94,7 +102,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Filet de turbot</b><br>Aux agrumes</p>
+                        <p><b>Mijoté de queue de boeuf </b><br>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="menu__plats__prix"><b>44€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -105,7 +113,7 @@
             <div class="menu__desserts">
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Paris-Brest</b><br>Revisité</p>
+                        <p><b>Macaron noisette et chocolat</b><br>Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="menu__desserts__prix"><b>18€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
@@ -113,7 +121,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Macaron au chocolat d'exception</b><br>Et glace à la vanille de Madagascar</p>
+                        <p><b>Baba au rhum revisité</b><br>Avec son coulis de citron</p>
                     </div>
                     <div class="menu__desserts__prix"><b>22€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
@@ -121,7 +129,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Mousse au chocolat </b><br>Au piment d'Espelette et à la truffe noire</p>
+                        <p><b>Tarte au citron meringuée</b><br>Déstructurée</p>
                     </div>
                     <div class="menu__desserts__prix"><b>23€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
