--- a/menu3.html
+++ b/menu3.html
@@ -31,14 +31,14 @@
     <main>
         <!--Image background-->
         <section class="background">
-            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant la palette du goût">
+            <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo restaurant A la française">
         </section>
 
         <!--Menu-->
         <section class="menu">
 
             <div class="menu__name">
-                <h1>La palette du goût</h1>
+                <h1>A la française</h1>
                 <i class="far fa-heart"></i>
             </div>
 
@@ -50,7 +50,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Fricassée d'escargot</b><br>Au piment d'espelette</p>
+                        <p><b>Tartare de poulpe acidulé</b><br>Aux zestes d'orange</p>
                     </div>
                     <div class="menu__entrees__prix"><b>25€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
@@ -58,7 +58,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Foie gras de canard mi-cuit</b><br>Et ses copeaux de truffe noire</p>
+                        <p><b>Velouté de légumes d'antan</b><br>Carotte, panais, topinambour</p>
                     </div>
                     <div class="menu__entrees__prix"><b>35€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
@@ -66,11 +66,12 @@
 
                 <div class="btn__menu">
                     <div class="menu__entrees__titre">
-                        <p><b>Oeuf au plat</b><br>Assaisonné à la truffe sur lit de caviar</p>
+                        <p><b>Soupe à l'oignon</b><br>Revisitée</p>
                     </div>
                     <div class="menu__entrees__prix"><b>20€</b></div>
                     <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
                 </div>
+
             </div>
 
             <!--plats-->
@@ -78,7 +79,7 @@
                 <h2>PLATS</h2>
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Filet de boeuf aux herbes</b><br>Accompagné de sa ribambelle de légumes</p>
+                        <p><b>Coquilles Saint-Jacques</b><br>Accompagnées d'une purée de panais</p>
                     </div>
                     <div class="menu__plats__prix"><b>40€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -86,7 +87,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Parmentier de queue de boeuf</b><br>À la truffe noire sur sa purée de panais</p>
+                        <p><b>Magret de canard</b><br>Et parmentier de pommes de terre</p>
                     </div>
                     <div class="menu__plats__prix"><b>35€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -94,7 +95,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__plats__titre">
-                        <p><b>Filet de turbot</b><br>Aux agrumes</p>
+                        <p><b>Pigeonneau d’Ille-et-Vilaine</b><br>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <div class="menu__plats__prix"><b>44€</b></div>
                     <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
@@ -105,7 +106,7 @@
             <div class="menu__desserts">
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Paris-Brest</b><br>Revisité</p>
+                        <p><b>Pétales de violettes glacés</b><br>Et purée de noisettes</p>
                     </div>
                     <div class="menu__desserts__prix"><b>18€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
@@ -113,7 +114,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Macaron au chocolat d'exception</b><br>Et glace à la vanille de Madagascar</p>
+                        <p><b>Fondant au chocolat</b><br>Revisité</p>
                     </div>
                     <div class="menu__desserts__prix"><b>22€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
@@ -121,7 +122,7 @@
 
                 <div class="btn__menu">
                     <div class="menu__desserts__titre">
-                        <p><b>Mousse au chocolat </b><br>Au piment d'Espelette et à la truffe noire</p>
+                        <p><b>Millefeuille croustillant</b><br>Myrtilles et pâte d’amande</p>
                     </div>
                     <div class="menu__desserts__prix"><b>23€</b></div>
                     <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
