localisation+présentation index CSS

--- a/index.html
+++ b/index.html
@@ -24,40 +24,40 @@
 
 <body>
     <header>
-        <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
+        <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
     </header>
     <main>
         <!--Partie présentation-->
 
         <section class="presentation">
-            <div class="localisation">
-                <i class="fas fa-map-marker-alt"></i>
+            <div class="presentation__localisation">
+                <i class="fas fa-map-marker-alt icon"></i>
                 <p>Paris,Belleville</p>
             </div>
 
-            <div class="presentation--site">
+            <div class="presentation__site">
                 <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button class="btn__action">Explorer nos restaurants</button>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <button class="presentation__site btn__action">Explorer nos restaurants</button>
 
             </div>
         </section>
 
         <section class="fonctionnement">
             <h1>Fonctionnement</h1>
-            <div class="fonctionnement__liste">
+            <div class="fonctionnement__titre">
                 <li>
-                    <span class="fonctionnement__chiffre">1</span>
+                    <span class="fonctionnement__liste">1</span>
                     <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
                 </li>
 
                 <li>
-                    <span class="fonctionnement__chiffre">2</span>
+                    <span class="fonctionnement__liste">2</span>
                     <i class="fas fa-list-ul"></i> Composez votre menu
                 </li>
 
                 <li>
-                    <span class="fonctionnement__chiffre">3</span>
+                    <span class="fonctionnement__liste">3</span>
                     <i class="fas fa-store"></i> Dégustez au restaurant</li>
             </div>
 
