--- a/menu3.html
+++ b/menu3.html
@@ -2,10 +2,11 @@
 <html lang="fr">
 
 <head>
-    <title></title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ohmyfood</title>
+    <link rel="stylesheet" href="style.css">
 
     <!--police google font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -129,7 +130,7 @@
                 </div>
             </div>
             <!--Bouton commander-->
-            <div class="btn__commander">
+            <div class="btn__action">
                 <button>Commander</button>
             </div>
 
