--- a/index.html
+++ b/index.html
@@ -44,21 +44,22 @@
         </section>
 
         <section class="fonctionnement">
-            <h1>Fonctionnement</h1>
-            <div class="fonctionnement__titre">
-                <li>
-                    <span class="fonctionnement__liste">1</span>
+            <h1 class="fonctionnement__titre">Fonctionnement</h1>
+            <div class="fonctionnement__explication">
+                <div class="fonctionnement__liste">
+                    <span class="fonctionnement__chiffre">1</span>
                     <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
-                </li>
+                </div>
 
-                <li>
-                    <span class="fonctionnement__liste">2</span>
+                <div class="fonctionnement__liste">
+                    <span class="fonctionnement__chiffre">2</span>
                     <i class="fas fa-list-ul"></i> Composez votre menu
-                </li>
+                </div>
 
-                <li>
-                    <span class="fonctionnement__liste">3</span>
-                    <i class="fas fa-store"></i> Dégustez au restaurant</li>
+                <div class="fonctionnement__liste">
+                    <span class="fonctionnement__chiffre">3</span>
+                    <i class="fas fa-store"></i> Dégustez au restaurant
+                </div>
             </div>
 
         </section>
