--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="presentation">
             <div class="presentation__localisation">
                 <i class="fas fa-map-marker-alt icon"></i>
-                <p>Paris,Belleville</p>
+                <p>Paris, Belleville</p>
             </div>
 
             <div class="presentation__site">
@@ -46,6 +46,7 @@
         <section class="fonctionnement">
             <h1 class="fonctionnement__titre">Fonctionnement</h1>
             <div class="fonctionnement__explication">
+
                 <div class="fonctionnement__liste">
                     <span class="fonctionnement__chiffre">1</span>
                     <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
@@ -74,8 +75,7 @@
                 <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Carte du restaurant la palette du gôut">
                 <p class="restaurants__nouveau">Nouveau</p>
                 <div class="restaurants__cartes__texte">
-                    <h3>La palette du gôut</h3>
-                    <p>Ménilmontant</p>
+                    <p><b>La palette du gôut</b><br>Ménilmontant</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
@@ -84,8 +84,8 @@
                 <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Carte du restaurant La note enchantée">
                 <p class="restaurants__nouveau">Nouveau</p>
                 <div class="restaurants__cartes__texte">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
+                    <p><b>La note enchantée</b><br>Charonne</p>
+
                     <i class="far fa-heart"></i>
                 </div>
             </a>
@@ -93,8 +93,8 @@
             <a class="restaurants__cartes" href="./menu3.html">
                 <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Carte du restaurant A la française">
                 <div class="restaurants__cartes__texte">
-                    <h3>A la française</h3>
-                    <p>Cité Rouge</p>
+                    <p><b>A la française</b><br>Cité Rouge</p>
+
                     <i class="far fa-heart"></i>
                 </div>
             </a>
@@ -102,8 +102,7 @@
             <a class="restaurants__cartes" href="./menu4.html">
                 <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Carte du restaurant Le délice des sens">
                 <div class="restaurants__cartes__texte">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
+                    <p><b>Le délice des sens</b><br>Folie-Méricourt</p>
                     <i class="far fa-heart"></i>
                 </div>
             </a>
@@ -115,14 +114,14 @@
 
     <!--Footer-->
 
-    <footer>
+    <footer class="footer">
         <img src="./Maquettes/images/logo/ohmyfood.png">
-        <div class="ul">
+        <ul class="footer__liste">
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
             <li><a href="mailto:hello@gmail.com">Contact</a></li>
-        </div>
+        </ul>
     </footer>
 
 </body>
