--- a/menu1.html
+++ b/menu1.html
@@ -24,16 +24,14 @@
     <!--Haut de page-->
     <header>
         <div class="header__pages">
-            <a href="./index.html"><i class="fas fa-long-arrow-alt-left"></i></a>
-            <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
+            <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
         </div>
     </header>
 
     <main>
         <!--Image background-->
-        <section class="background">
-            <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo restaurant la palette du goût">
-        </section>
+        <div class="background"></div>
 
         <!--Menu-->
         <section class="menu">
@@ -43,91 +41,97 @@
                 <i class="far fa-heart"></i>
             </div>
 
-            <!--Entrées-->
+            <div class="menu__bloc">
+                <!--Entrées-->
 
 
-            <div class="menu__entrees">
-                <h2>ENTRÉES</h2>
+                <div class="menu__entrees">
+                    <h2>ENTRÉES</h2>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Fricassée d'escargot</b><br>Au piment d'espelette</p>
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Fricassée d'escargot</b><br>Au piment d'espelette</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>25€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>25€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Foie gras de canard mi-cuit</b><br>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>35€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Oeuf au plat</b><br>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>20€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Foie gras de canard mi-cuit</b><br>Et ses copeaux de truffe noire</p>
+                <!--plats-->
+                <div class="menu__plats">
+                    <h2>PLATS</h2>
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Filet de boeuf aux herbes</b><br>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>40€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>35€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Parmentier de queue de boeuf</b><br>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>35€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Filet de turbot</b><br>Aux agrumes</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>44€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </div>
+                <!--desserts-->
+                <h2>DESSERTS</h2>
+                <div class="menu__desserts">
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Paris-Brest</b><br>Revisité</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>18€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Macaron au chocolat d'exception</b><br>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>22€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Mousse au chocolat </b><br>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>23€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Oeuf au plat</b><br>Assaisonné à la truffe sur lit de caviar</p>
-                    </div>
-                    <div class="menu__entrees__prix"><b>20€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                </div>
             </div>
 
-            <!--plats-->
-            <div class="menu__plats">
-                <h2>PLATS</h2>
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Filet de boeuf aux herbes</b><br>Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>40€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
 
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Parmentier de queue de boeuf</b><br>À la truffe noire sur sa purée de panais</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>35€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
 
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Filet de turbot</b><br>Aux agrumes</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>44€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
-            <!--desserts-->
-            <h2>DESSERTS</h2>
-            <div class="menu__desserts">
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Paris-Brest</b><br>Revisité</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>18€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Macaron au chocolat d'exception</b><br>Et glace à la vanille de Madagascar</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>22€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Mousse au chocolat </b><br>Au piment d'Espelette et à la truffe noire</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>23€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
             <!--Bouton commander-->
             <div class="commander">
                 <button class="btn__action">Commander</button>
@@ -139,9 +143,9 @@
 
 
     <!--footer-->
-    <footer>
+    <footer class="footer">
         <img src="./Maquettes/images/logo/ohmyfood.png">
-        <div class="ul">
+        <div class="footer__liste">
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
