--- a/menu3.html
+++ b/menu3.html
@@ -24,8 +24,8 @@
     <!--Haut de page-->
     <header>
         <div class="header__pages">
-            <a href="./index.html"><i class="fas fa-long-arrow-alt-left"></i></a>
-            <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
+            <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
         </div>
     </header>
 
@@ -43,95 +43,100 @@
                 <i class="far fa-heart"></i>
             </div>
 
-            <!--Entrées-->
+            <div class="menu__bloc">
+                <!--Entrées-->
 
 
-            <div class="menu__entrees">
-                <h2>ENTRÉES</h2>
+                <div class="menu__entrees">
+                    <h2>ENTRÉES</h2>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Tartare de poulpe acidulé</b><br>Aux zestes d'orange</p>
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Tartare de poulpe acidulé</b><br>Aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>25€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>25€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Velouté de légumes d'antan</b><br>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>35€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Soupe à l'oignon</b><br>Revisitée</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>20€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
                 </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Velouté de légumes d'antan</b><br>Carotte, panais, topinambour</p>
+                <!--plats-->
+                <div class="menu__plats">
+                    <h2>PLATS</h2>
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Coquilles Saint-Jacques</b><br>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>40€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>35€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Soupe à l'oignon</b><br>Revisitée</p>
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Magret de canard</b><br>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>35€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>20€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Pigeonneau d’Ille-et-Vilaine</b><br>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>44€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </div>
+                <!--desserts-->
+                <h2>DESSERTS</h2>
+                <div class="menu__desserts">
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Pétales de violettes glacés</b><br>Et purée de noisettes</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>18€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Fondant au chocolat</b><br>Revisité</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>22€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Millefeuille croustillant</b><br>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>23€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
 
             </div>
 
-            <!--plats-->
-            <div class="menu__plats">
-                <h2>PLATS</h2>
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Coquilles Saint-Jacques</b><br>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>40€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
 
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Magret de canard</b><br>Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>35€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Pigeonneau d’Ille-et-Vilaine</b><br>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>44€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
-            <!--desserts-->
-            <h2>DESSERTS</h2>
-            <div class="menu__desserts">
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Pétales de violettes glacés</b><br>Et purée de noisettes</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>18€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Fondant au chocolat</b><br>Revisité</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>22€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Millefeuille croustillant</b><br>Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>23€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
             <!--Bouton commander-->
-            <div class="btn__action">
-                <button>Commander</button>
+            <div class="commander">
+                <button class="btn__action">Commander</button>
             </div>
 
 
@@ -140,9 +145,9 @@
 
 
     <!--footer-->
-    <footer>
+    <footer class="footer">
         <img src="./Maquettes/images/logo/ohmyfood.png">
-        <div class="ul">
+        <div class="footer__liste">
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
