--- a/index.html
+++ b/index.html
@@ -43,73 +43,82 @@
             </div>
         </section>
 
-        <section class="fonctionnement">
-            <h1 class="fonctionnement__titre">Fonctionnement</h1>
-            <div class="fonctionnement__explication">
+        <div class="wrapper">
+            <section class="fonctionnement">
+                <h1 class="fonctionnement__titre">Fonctionnement</h1>
+                <div class="fonctionnement__explication">
 
-                <div class="fonctionnement__liste">
-                    <span class="fonctionnement__chiffre">1</span>
-                    <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
+                    <div class="fonctionnement__liste">
+                        <span class="fonctionnement__chiffre">1</span>
+                        <i class="fas fa-mobile-alt"></i> Choisissez un restaurant
+                    </div>
+
+                    <div class="fonctionnement__liste">
+                        <span class="fonctionnement__chiffre">2</span>
+                        <i class="fas fa-list-ul"></i> Composez votre menu
+                    </div>
+
+                    <div class="fonctionnement__liste">
+                        <span class="fonctionnement__chiffre">3</span>
+                        <i class="fas fa-store"></i> Dégustez au restaurant
+                    </div>
                 </div>
 
-                <div class="fonctionnement__liste">
-                    <span class="fonctionnement__chiffre">2</span>
-                    <i class="fas fa-list-ul"></i> Composez votre menu
+            </section>
+
+            <!--Les restaurants-->
+
+            <section class="restaurants">
+                <h1 class="restaurants__titre">Restaurants</h1>
+                <div class="restaurants__bloc">
+
+                    <a class="restaurants__cartes" href="./menu1.html">
+
+                        <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Carte du restaurant la palette du gôut">
+                        <p class="restaurants__nouveau">Nouveau</p>
+                        <div class="restaurants__cartes__texte">
+                            <p><b>La palette du gôut</b><br>Ménilmontant</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </a>
+
+                    <a class="restaurants__cartes" href="./menu2.html">
+                        <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Carte du restaurant La note enchantée">
+                        <p class="restaurants__nouveau">Nouveau</p>
+                        <div class="restaurants__cartes__texte">
+                            <p><b>La note enchantée</b><br>Charonne</p>
+
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </a>
+
+                    <a class="restaurants__cartes" href="./menu3.html">
+                        <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Carte du restaurant A la française">
+                        <div class="restaurants__cartes__texte">
+                            <p><b>A la française</b><br>Cité Rouge</p>
+
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </a>
+
+                    <a class="restaurants__cartes" href="./menu4.html">
+                        <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Carte du restaurant Le délice des sens">
+                        <div class="restaurants__cartes__texte">
+                            <p><b>Le délice des sens</b><br>Folie-Méricourt</p>
+                            <i class="far fa-heart"></i>
+                        </div>
+                    </a>
+
                 </div>
 
-                <div class="fonctionnement__liste">
-                    <span class="fonctionnement__chiffre">3</span>
-                    <i class="fas fa-store"></i> Dégustez au restaurant
-                </div>
-            </div>
+            </section>
 
-        </section>
-
-        <!--Les restaurants-->
-
-        <section class="restaurants">
-            <h1 class="restaurants__titre">Restaurants</h1>
-
-            <a class="restaurants__cartes" href="./menu1.html">
-
-                <img src="./Maquettes/images/restocomp/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Carte du restaurant la palette du gôut">
-                <p class="restaurants__nouveau">Nouveau</p>
-                <div class="restaurants__cartes__texte">
-                    <p><b>La palette du gôut</b><br>Ménilmontant</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-
-            <a class="restaurants__cartes" href="./menu2.html">
-                <img src="./Maquettes/images/restocomp/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Carte du restaurant La note enchantée">
-                <p class="restaurants__nouveau">Nouveau</p>
-                <div class="restaurants__cartes__texte">
-                    <p><b>La note enchantée</b><br>Charonne</p>
-
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-
-            <a class="restaurants__cartes" href="./menu3.html">
-                <img src="./Maquettes/images/restocomp/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Carte du restaurant A la française">
-                <div class="restaurants__cartes__texte">
-                    <p><b>A la française</b><br>Cité Rouge</p>
-
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-
-            <a class="restaurants__cartes" href="./menu4.html">
-                <img src="./Maquettes/images/restocomp/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Carte du restaurant Le délice des sens">
-                <div class="restaurants__cartes__texte">
-                    <p><b>Le délice des sens</b><br>Folie-Méricourt</p>
-                    <i class="far fa-heart"></i>
-                </div>
-            </a>
-
-        </section>
 
     </main>
+
+    </div>
+
+
 
 
     <!--Footer-->
