--- a/menu2.html
+++ b/menu2.html
@@ -24,8 +24,8 @@
     <!--Haut de page-->
     <header>
         <div class="header__pages">
-            <a href="./index.html"><i class="fas fa-long-arrow-alt-left"></i></a>
-            <img src="./Maquettes/images/logo/ohmyfood.png" alt="logo de  ohmyfood">
+            <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <img src="./Maquettes/images/logo/ohmyfood.png" class="logo" alt="logo de  ohmyfood">
         </div>
     </header>
 
@@ -43,101 +43,106 @@
                 <i class="far fa-heart"></i>
             </div>
 
-            <!--Entrées-->
+            <div class="menu__bloc">
+                <!--Entrées-->
 
 
-            <div class="menu__entrees">
-                <h2>ENTRÉES</h2>
+                <div class="menu__entrees">
+                    <h2>ENTRÉES</h2>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Ravioles de foie gras</b><br>Accompagnés de leur crème à la truffe</p>
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Ravioles de foie gras</b><br>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>25€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>25€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Caviar osciètre </b><br>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>35€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Homard et espuma de potiron</b><br>Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>20€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__entrees__titre">
+                            <p><b>Foie gras de canard cuit entier</b><br>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__entrees__prix"><b>35€</b></div>
+                        <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Caviar osciètre </b><br>Sur blini à la farine de blé noir</p>
+                <!--plats-->
+                <div class="menu__plats">
+                    <h2>PLATS</h2>
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Noix de coquilles Saint-Jacques</b><br>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>40€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
                     </div>
-                    <div class="menu__entrees__prix"><b>35€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
+
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Langoustine poêlée</b><br>Purée de patate douce</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>35€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__plats__titre">
+                            <p><b>Mijoté de queue de boeuf </b><br>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__plats__prix"><b>44€</b></div>
+                        <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+                </div>
+                <!--desserts-->
+                <h2>DESSERTS</h2>
+                <div class="menu__desserts">
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Macaron noisette et chocolat</b><br>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>18€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Baba au rhum revisité</b><br>Avec son coulis de citron</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>22€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
+
+                    <div class="btn__menu">
+                        <div class="menu__desserts__titre">
+                            <p><b>Tarte au citron meringuée</b><br>Déstructurée</p>
+                        </div>
+                        <div class="menu__desserts__prix"><b>23€</b></div>
+                        <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
 
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Homard et espuma de potiron</b><br>Mariné aux zestes d'orange</p>
-                    </div>
-                    <div class="menu__entrees__prix"><b>20€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__entrees__titre">
-                        <p><b>Foie gras de canard cuit entier</b><br>Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="menu__entrees__prix"><b>35€</b></div>
-                    <div class="menu__entrees__check"><i class="far fa-check-circle"></i></div>
-                </div>
             </div>
 
-            <!--plats-->
-            <div class="menu__plats">
-                <h2>PLATS</h2>
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Noix de coquilles Saint-Jacques</b><br>Sur lit de purée de céleri-rave</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>40€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
 
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Langoustine poêlée</b><br>Purée de patate douce</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>35€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__plats__titre">
-                        <p><b>Mijoté de queue de boeuf </b><br>Et riz sauvage aux zestes de citron</p>
-                    </div>
-                    <div class="menu__plats__prix"><b>44€</b></div>
-                    <div class="menu__plats__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
-            <!--desserts-->
-            <h2>DESSERTS</h2>
-            <div class="menu__desserts">
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Macaron noisette et chocolat</b><br>Glace au caramel brun et sel de Guérande</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>18€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Baba au rhum revisité</b><br>Avec son coulis de citron</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>22€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-
-                <div class="btn__menu">
-                    <div class="menu__desserts__titre">
-                        <p><b>Tarte au citron meringuée</b><br>Déstructurée</p>
-                    </div>
-                    <div class="menu__desserts__prix"><b>23€</b></div>
-                    <div class="menu__desserts__check"><i class="far fa-check-circle"></i></div>
-                </div>
-            </div>
             <!--Bouton commander-->
-            <div>
+            <div class="commander">
                 <button class="btn__action">Commander</button>
             </div>
 
@@ -147,9 +152,9 @@
 
 
     <!--footer-->
-    <footer>
+    <footer class="footer">
         <img src="./Maquettes/images/logo/ohmyfood.png">
-        <div class="ul">
+        <div class="footer__liste">
             <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
